# LangChain

./: requirements.txt
CrewAi/crewai-tutorial/: .env  1_email_agent.ipynb  2_blog_agent.ipynb  3_blog_agent_serperdev.ipynb  4_blog_yaml.py  Plan.md  pyproject.toml
RAG/: Notes.md  rag_from_scratch.ipynb
langchain_trial/: .gitignore  pyproject.toml  template.json
langchain_trial/10. Text Splitters/: 1. length_based_text_splitting.py  2. 2-text_structured_splitter.py  4. semantic_meaning_based_text_splitter.py
langchain_trial/11. Vector Stores/: langchain_chroma.ipynb
langchain_trial/12. Retrievers/: 1. wikipedia_retrievers.ipynb  2. vector_retriever.ipynb
langchain_trial/13. Youtube Bot/: 1. youtube_bot.ipynb
langchain_trial/14. Currency Conversion Tool/: 1. currency_conversion_bot.ipynb
langchain_trial/15. Agentic AI/: 1. ai_agent.ipynb
langchain_trial/2. Chatmodels/: 1. chatmodel_openai.py  2. chatmodel_anthropic.py  3. chatmodel_gemini.py  4. chatmodel_hf_api.py  5. chatmodel_hf_local.py
langchain_trial/3. Embeddingmodels/: 1. embedding_openai_query.py  2. embedding_openai_docs.py  3. embedding_hf_local.py  4. document_similarity.py
langchain_trial/4. Prompts/: 1. prompt_ui.py  2. prompt_generator.py
langchain_trial/5. Chatbot/: chat_prompt_template.py  chatbot_ollama.py  message_placeholder.py  messages.py
langchain_trial/6. Output Parser/: hugging_face.py  json_schema.json  jsonoutputparser.py  pydantic_demo.py  pydantic_output_parser.py  stroutparser.py  structured_output_parser.py  typed_dict_demo.py  with_structured_output_json.json  with_structured_output_json.py  with_structured_output_typeddict.py  with_structured_pydantic.py
langchain_trial/7. Chains/: 1. simple_chain.py  2. sequential_chain.py  3. parallel_chain.py  4. conditional_chain.py
langchain_trial/8. Runnables/: 1. runnable class implementation.py  1. runnable.py  2. runnables.py  4. runnable_parallel.py  5. runnable_passthrough.py  6. runnable_lambda.py  7. runnable_branch.py  pdf_reader.py
langchain_trial/9. Document Loader/: 1. text_loader.py  2. PyPdfLoader.py  3. directory_loader.py  4. webbase_loader.py  5. csv_loader.py  document_text.txt
langchain_trial/trash/: file.py
langgraph-trial/: .env  0_test_bmi_workflow.ipynb  0_test_installation.ipynb  10_persistence.ipynb  1_llm_workflow.ipynb  2_prompt_chaining.ipynb  3_batsman_workflow.ipynb  4_UPSC_workflow.ipynb  5_quadratic_equation_workflow.ipynb  6_LLM_workflow.ipynb  7_X_post_generator.ipynb  8_basic_chatbot.ipynb  README.md  main.py  persistence.ipynb  persistence_thread_itnerrupt.ipynb  pyproject.toml
langgraph-trial/ChatBot/: Plan.md  langgraph_backend.py  langgraph_database_backend.py  langgraph_database_frontend.py  streamlit_frontend.py  streamlit_frontend_sidebar_threading.py  streamlit_frontend_streaming.py
